Add portfolio and review sections; update navigation and styles

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
                 <ul>
                     <li><a href="#home">Home</a><i class="fa-solid fa-house-chimney"></i></li> <hr>
                     <li><a href="#about">About</a><i class="fa-solid fa-address-card"></i></li> <hr>
-                    <li><a href="#edu">Experience</a><i class="fa-solid fa-star"></i></li> <hr>
-                    <li><a href="#exp">Service</a><i class="fa-solid fa-list-ul"></i></li> <hr>
-                    <li><a href="#">Portfolio</a><i class="fa-solid fa-file"></i></li> <hr>
-                    <li><a href="#">Contact</a><i class="fa-solid fa-envelope"></i></li> 
+                    <li><a href="#exp">Experience</a><i class="fa-solid fa-star"></i></li> <hr>
+                    <li><a href="#service">Service</a><i class="fa-solid fa-list-ul"></i></li> <hr>
+                    <li><a href="#port">Portfolio</a><i class="fa-solid fa-file"></i></li> <hr>
+                    <li><a href="contact#">Contact</a><i class="fa-solid fa-envelope"></i></li> 
                 </ul>
             </nav>
 
@@ -186,6 +186,42 @@
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum, quaerat accusamus dolorum, non itaque, repudiandae voluptatibus delectus amet cupiditate exercitationem fugit. Eveniet quo enim debitis minima explicabo qui officia sunt. Pariatur at est excepturi. Voluptates labore omnis quibusdam officiis libero.</p>
                     </article>
                 </div>
+            </section>
+
+            <section id="port">
+                <h2>Portfolio</h2>
+                <div class="category">
+                    <button>all</button>
+                    <button>design</button>
+                    <button>development</button>
+                    <button>marketing</button>
+                </div>
+                <div class="port-container">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+            </section>
+
+            <section id="review">
+                <h2>Review</h2>
+                <p>
+                    "Abdulkarim Ismail is an exceptional front-end developer with a keen eye for design and a deep understanding of web technologies. His ability to create responsive, user-friendly, and visually appealing interfaces is truly impressive. He consistently delivers high-quality work, meeting deadlines and exceeding expectations. A true professional who is passionate about crafting seamless digital experiences."
+                </p>
+                <div class="user">
+                    <img src="./images/man.jpeg" alt="">
+                    <div class="user-details">
+                        <p>John Doe</p>
+                        <p>Chairman, Gizo Motors</p>    
+                    </div>
+                </div>
+            </section>
+
+            <section id="contact">
+                <h2>Contact</h2>
             </section>
 
         </main>
