``` Add initial project structure and styles ```

--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
-    <title>Portfolio Template</title>
+    <title>Portfolio of Abdulkarim</title>
 </head>
 <body style="background-color: #F6D155;">
 
-    <div class="body-container">
-        <header>
-            <img src="./images/boy.jpeg" alt="" class="passport">
+        <aside>
+            <img src="./images/abba.jpg" alt="" class="passport">
 
             <nav>
                 <ul>
@@ -21,16 +20,16 @@
                     <li><a href="#exp">Experience</a><i class="fa-solid fa-star"></i></li> <hr>
                     <li><a href="#service">Service</a><i class="fa-solid fa-list-ul"></i></li> <hr>
                     <li><a href="#port">Portfolio</a><i class="fa-solid fa-file"></i></li> <hr>
-                    <li><a href="contact#">Contact</a><i class="fa-solid fa-envelope"></i></li> 
+                    <li><a href="#contact">Contact</a><i class="fa-solid fa-envelope"></i></li> 
                 </ul>
             </nav>
 
-            <div class="socials">
-                <a href=""><i class='bx bxl-twitter'></i></a>
-                <a href=""><i class='bx bxl-github'></i></a>
-                <a href=""><i class='bx bxl-linkedin'></i></a>
-            </div>
-        </header>
+            <footer>
+                <a href="https://x.com/itskarim01"><i class='bx bxl-twitter'></i></a>
+                <a href="https://github.com/itskarim01"><i class='bx bxl-github'></i></a>
+                <a href="https://linkedin.com/in/abdulkarim-ismail-835a7934a"><i class='bx bxl-linkedin'></i></a>
+            </footer>
+        </aside>
 
         <main>
             <section id="home">
@@ -39,17 +38,18 @@
                     <h1>Abdulkarim Ismail</h1>
                     <span>Front-End Developer</span>
                 </div>
-                <img src="./images/boy.jpeg" alt="" class="passport2">
+                <img src="./images/abba.jpg" alt="" class="passport2">
             </section> 
+            
             <div class="btn">
-                <button>Resume</button>
-                <button>Hire Me</button>     
+                <button><i class='bx bxs-file-import' style='color:#ff7e71'  ></i>Resume</button>
+                <button><i class="fa-solid fa-handshake" style='color:#393939'></i>Hire Me</button>     
             </div>
 
             <section id="about">
                 <h2>About Me</h2>
                 <div class="info">
-                    <img src="./images/boy.jpeg" alt="">
+                    <img src="./images/abba.jpg" alt="">
                     <p>
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur reiciendis temporibus eius cupiditate sapiente molestiae, quasi corporis? Voluptate consequatur repellat earum aliquid consectetur commodi tempora.
                         <br><br>
@@ -67,7 +67,6 @@
                             <div class="progress">.</div>
                         </div>
                     </div>
-
                     <div class="develop">
                         <div class="skill-info">
                             <p>Development</p>
@@ -77,7 +76,6 @@
                             <div class="progress">.</div>
                         </div>
                     </div>
-
                     <div class="seo">
                         <div class="skill-info">
                             <p>SEO</p>
@@ -87,7 +85,6 @@
                             <div class="progress">.</div>
                         </div>
                     </div>
-
                     <div class="market">
                         <div class="skill-info">
                             <p>Marketing</p>
@@ -136,24 +133,24 @@
                     <div class="row1">
                         <article>
                             <p>Jan-1-2020 to Mar-30-2025</p>
-                            <h3>Master Degree</h3>
+                            <h3>Codex Solution</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure necessitatibus reiciendis eaque libero laboriosam incidunt consequatur, placeat id iste asperiores.</p>
                         </article>
                         <article>
                             <p>Jan-1-2020 to Mar-30-2025</p>
-                            <h3>Associate Degree</h3>
+                            <h3>Soft Solution Ltd</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure necessitatibus reiciendis eaque libero laboriosam incidunt consequatur, placeat id iste asperiores.</p>
                         </article>
                     </div>
                     <div class="row2">
                         <article>
                             <p>Jan-1-2020 to Mar-30-2025</p>
-                            <h3>Bachelor Degree</h3>
+                            <h3>ABC Soft Ltd</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure necessitatibus reiciendis eaque libero laboriosam incidunt consequatur, placeat id iste asperiores.</p>
                         </article>
                         <article>
                             <p>Jan-1-2020 to Mar-30-2025</p>
-                            <h3>High School</h3>
+                            <h3>Soft Agency</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure necessitatibus reiciendis eaque libero laboriosam incidunt consequatur, placeat id iste asperiores.</p>
                         </article>
                     </div>    
@@ -197,12 +194,30 @@
                     <button>marketing</button>
                 </div>
                 <div class="port-container">
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
+                    <div>
+                        <img src="./images/portfolio-1~2.jpg" alt="">
+                        <a href="">Project Name</a>
+                    </div>
+                    <div>
+                        <img src="./images/portfolio-2~2.jpg" alt="">
+                        <a href="">Project Name</a>
+                    </div>
+                    <div>
+                        <img src="./images/portfolio-3~2.jpg" alt="">
+                        <a href="">Project Name</a>
+                    </div>
+                    <div>
+                        <img src="./images/portfolio-4~2.jpg" alt="">
+                        <a href="">Project Name</a>
+                    </div>
+                    <div>
+                        <img src="./images/portfolio-5~2.jpg" alt="">
+                        <a href="">Project Name</a>
+                    </div>
+                    <div>
+                        <img src="./images/portfolio-6~2.jpg" alt="">
+                        <a href="">Project Name</a>
+                    </div>
                 </div>
             </section>
 
@@ -222,10 +237,24 @@
 
             <section id="contact">
                 <h2>Contact</h2>
+                <div>
+                    <div class="contact-details">
+                        <p><i class='bx bxs-user' style='color:#ff7e71'  ></i>Abdulkarim Ismail</p>
+                        <p><i class='bx bxs-purchase-tag' style='color:#ff7e71' ></i>Front-End Developer</p>
+                        <a href="mailto:abbashehu775@gmail.com"><i class='bx bx-at' style='color:#ff7e71'  ></i>abbashehu775@gmail.com</a>
+                        <a href="tel:+2348087766026"><i class='bx bxs-phone' style='color:#ff7e71' ></i>+234 808 776 6026</a>
+                        <p><i class='bx bxs-map' style='color:#ff7e71' ></i>12 Shehu Umar Garbai Crescent, 1st Avenue, Gwarinpa, Abuja, NIgeria</p>
+                    </div>
+                    <form action="">
+                        <input type="text" name="" id="" placeholder="Your Name">
+                        <input type="email" name="" id="" placeholder="Your Email">    
+                        <input type="text" name="" id="" placeholder="Subject">
+                        <input type="text" name="" id="" placeholder="Message">
+                        <button type="submit">Send Message</button>
+                    </form>
+                </div>
             </section>
-
         </main>
-    </div>
 
 </body>
 </html>
